fixed card spacing

--- a/wp-content/themes/danfleming/style.css
+++ b/wp-content/themes/danfleming/style.css
@@ -1237,7 +1237,7 @@ body {
  margin-top: 0;
  font-weight: 700;
  max-width: 300px;
- padding-bottom:65px;
+ padding-bottom: 45px;
 }
 
 .projectCard h3 {
